Edit auth route

--- a/api/views/login.ejs
+++ b/api/views/login.ejs
@@ -12,6 +12,6 @@
     </div>
 </form>
 
-<a href="/api/auth/google" class="button">Sign in with Google</a>
+<a href="/auth/google" class="button">Sign in with Google</a>
 <br>
-<a href="/api/auth/facebook" class="button">Sign in with FaceBook</a>
+<a href="/auth/facebook" class="button">Sign in with FaceBook</a>
