--- a/client/src/components/GlobalStyles/GlobalStyles.scss
+++ b/client/src/components/GlobalStyles/GlobalStyles.scss
@@ -8,7 +8,8 @@
 
     //default layout
     --default-layout-header-height: 64px;
-    --default-layout-width: 1314px;
+    --default-layout-width: 100vw;
+    --default-width-container: 1208px;
 }
 
 html {
