--- a/client/src/components/Input/Input.scss
+++ b/client/src/components/Input/Input.scss
@@ -18,6 +18,7 @@
 }
 .input{
     border: none;
+    background-color: rgba(0,0,0,0);
     color:#1a1d28;
     display: block;
     font-size: 15px;
@@ -26,7 +27,7 @@
     margin-top: 5px;
     font-family: josefin-sans,sans-serif;
     margin-bottom: 5px;
-    width: 60%;
+    width: 100%;
     &:focus{
         outline: none;
     }
